<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<name>CYK Test Global Pom</name>
	<url>http://www.cykcorp.org</url>
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.cyk.pom</groupId>
	<artifactId>test</artifactId>
	<version>test.0.0.1</version>
	<packaging>pom</packaging>

	<properties>
		<!-- Project -->
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<!-- Java -->
		<version.java>1.7</version.java>
		<version.javaee>7.0</version.javaee>
		<!-- Test -->
		<version.junit>4.11</version.junit>
		<version.derby>10.10.1.1</version.derby>
		<version.mysql>5.1.30</version.mysql>
		<version.graphene.webdriver>2.0.1.Final</version.graphene.webdriver>
		<version.mockito>1.9.5</version.mockito>
		<version.hamcrest>1.3</version.hamcrest>
		<version.arquillian>1.1.2.Final</version.arquillian> 
		<version.arquillian.drone>1.2.0.Final</version.arquillian.drone>
		<version.arquillian.selenium>2.42.0</version.arquillian.selenium>
		<version.arquillian.glassfish>1.0.0.CR4</version.arquillian.glassfish>
		<version.arquillian.jboss>7.2.0.Final</version.arquillian.jboss>
		<version.arquillian.tomee>1.7.1</version.arquillian.tomee>
		<version.jacoco>0.5.7.201204190339</version.jacoco>
		<browser>phantomjs</browser> <!-- PhantomJS will be our default browser if no profile is specified-->
		
		<!-- JEE Application Server -->
		<!--GlassFish -->
		<version.glassfish>4.0</version.glassfish>
		<version.maven.embedded.glassfish.plugin>4.0-SNAPSHOT</version.maven.embedded.glassfish.plugin>

		<!-- JBoss -->
		<version.org.jboss.as>7.1.1.Final</version.org.jboss.as>
		<version.org.jboss.as.plugins.maven.plugin>7.3.Final</version.org.jboss.as.plugins.maven.plugin>
		<version.org.jboss.spec.jboss.javaee>3.0.0.Final</version.org.jboss.spec.jboss.javaee>

		<!-- other plugin versions -->
		<version.compiler.plugin>3.1</version.compiler.plugin>
		<maven.ejb.plugin>2.3</maven.ejb.plugin>

		<!--Maven Plugins & co -->
		<version.maven.compiler.target>1.7</version.maven.compiler.target>
		<version.maven.compiler.source>1.7</version.maven.compiler.source>
		<version.maven.surefire.plugin>2.3</version.maven.surefire.plugin>
		<version.maven.failsafe.plugin>2.17</version.maven.failsafe.plugin>
		<version.maven.compiler.plugin>3.1</version.maven.compiler.plugin>
		
		<!-- Signing -->
		<keystore.path>cert/temp.keystore</keystore.path>
	    <keystore.type>JKS</keystore.type>
	    <keystore.alias>dev</keystore.alias>
	    <keystore.password>dev_password</keystore.password>
	    <keystore.store.password>${keystore.password}</keystore.store.password>
	    <keystore.key.password>${keystore.password}</keystore.key.password>

		<!-- Misc -->
		<version.jrebel>1.1.5</version.jrebel>
		<version.lombokproject>1.16.8</version.lombokproject>
		<version.logging.slf4j>1.7.7</version.logging.slf4j>

		<!-- Repositories -->
		<!-- Local Repository -->
		<cyk.artifact.repository.local.id>localrep</cyk.artifact.repository.local.id>
		<cyk.artifact.repository.local.name>CYK Local Artifact Repository</cyk.artifact.repository.local.name>
		<cyk.artifact.repository.local.url>file://${user.home}\.m2\_local\_cyk</cyk.artifact.repository.local.url>

		<!-- Remote Repository -->
		<cyk.artifact.repository.remote.id>remoterep</cyk.artifact.repository.remote.id>
		<cyk.artifact.repository.remote.name>CYK Remote Artifact Repository</cyk.artifact.repository.remote.name>
		<cyk.artifact.repository.remote.url>https://github.com/devlopper/_repository.artifact.org.cyk/raw/master</cyk.artifact.repository.remote.url>

	</properties>

	<distributionManagement>
		<repository>
			<id>${cyk.artifact.repository.local.id}</id>
			<name>${cyk.artifact.repository.local.name}</name>
			<url>${cyk.artifact.repository.local.url}</url>
		</repository>
		<!--
		<relocation>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis</artifactId>
			<version>1.0.b2</version>
		</relocation>
		-->
	</distributionManagement>

	<build>
		<testResources>
	        <testResource>
	            <directory>src/test/resources</directory>
	            <filtering>true</filtering>
	        </testResource> 
	    </testResources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${version.compiler.plugin}</version>
				<configuration>
					<source>${version.maven.compiler.source}</source>
					<target>${version.maven.compiler.target}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${version.maven.surefire.plugin}</version>
				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m</argLine>
					<!--argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine-->
				</configuration>
				<executions>
					<execution>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<includes>
								<include>**/*UT.java</include>
							</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>${version.maven.failsafe.plugin}</version>
				
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
					<execution>
						<id>verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!--plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jarsigner-plugin</artifactId>
				<version>1.2</version>
				<executions>
	                <execution>
	                    <id>sign</id>
	                    <goals>
	                        <goal>sign</goal>
	                    </goals>
	                </execution>
	            </executions>
	            
				<configuration>
					<storetype>${keystore.type}</storetype>
					<keystore>${keystore.path}</keystore>
					<alias>${keystore.alias}</alias>
					<storepass>${keystore.store.password}</storepass>
					<keypass>${keystore.key.password}</keypass>
				</configuration>
				
				<configuration>
	                <keystore>keystore</keystore>
	                <alias>keyalias</alias>
	                <storepass>storepass</storepass>
	                <keypass>keypass</keypass>
	            </configuration>
				
			</plugin-->

		</plugins>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jboss.arquillian</groupId>
				<artifactId>arquillian-bom</artifactId>
				<version>${version.arquillian}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<!--dependency>
				<groupId>org.jboss.arquillian.extension</groupId>
				<artifactId>arquillian-drone-bom</artifactId>
				<version>${version.arquillian.drone}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.jboss.arquillian.selenium</groupId>
				<artifactId>selenium-bom</artifactId>
				<version>${version.arquillian.selenium}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency-->
		</dependencies>
	</dependencyManagement>

	<dependencies>

		<!-- Java Enterprise Edition API -->
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>${version.javaee}</version>
			<scope>provided</scope>
		</dependency>

		<!-- Code Utilities -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${version.lombokproject}</version>
			<scope>provided</scope>
		</dependency>
		
		<!-- Conflict xml-apis must be solved-->
		<dependency>
	         <groupId>org.reflections</groupId>
	         <artifactId>reflections</artifactId>
	         <version>0.9.9-RC1</version>
	         <exclusions>
	         	<exclusion>
	         		<groupId>xml-apis</groupId>
	         		<artifactId>xml-apis</artifactId>
	         	</exclusion>
	         </exclusions>
	     </dependency>

		<!-- Apache Commons -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.0</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.1.1</version>
		</dependency>
		
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>2.3</version>
		</dependency>
		
		<!-- Test -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${version.mockito}</version>
		</dependency> 
		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${version.junit}</version>
		</dependency>
		<dependency>
			<groupId>org.jboss.arquillian.junit</groupId>
			<artifactId>arquillian-junit-container</artifactId>
			
		</dependency>
		<!--dependency>
			<groupId>org.jboss.arquillian.graphene</groupId>
			<artifactId>graphene-webdriver</artifactId>
			<version>${version.graphene.webdriver}</version>
			<type>pom</type>
		</dependency-->
		<!--dependency>
		  <groupId>org.jboss.shrinkwrap.resolver</groupId>
		  <artifactId>shrinkwrap-resolver-impl-maven</artifactId>
		</dependency-->
		
		<!-- Web -->
		<dependency>
		    <groupId>org.seleniumhq.selenium</groupId>
		    <artifactId>selenium-java</artifactId>
		    <version>2.53.1</version>
		</dependency>
		<dependency>
		    <groupId>org.seleniumhq.selenium</groupId>
		    <artifactId>htmlunit-driver</artifactId>
		    <version>2.23</version>
		</dependency>
		<dependency>
		    <groupId>org.eclipse.jetty.websocket</groupId>
		    <artifactId>websocket-client</artifactId>
		    <version>9.2.18.v20160721</version>
		</dependency>
		
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>${version.hamcrest}</version>
		</dependency>

		<!-- Validation Implementation -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>5.0.0.Final</version>
		</dependency>
		
		<!-- databases -->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>${version.mysql}</version>
		</dependency>
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.3.2</version>
		</dependency>
		
		<dependency>
			<groupId>org.jdom</groupId>
			<artifactId>jdom</artifactId>
			<version>2.0.2</version>
		</dependency>
		

	</dependencies>

	<profiles>

		<!--profile> <id>development-environment</id> </profile -->

		<profile>
			<id>attach-sources</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>attach-javadocs</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.9.1</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>no-unit-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<skipTests>true</skipTests>
							<executions>
								<execution>
									<phase>test</phase>
									<goals>
										<goal>test</goal>
									</goals>
									<configuration>
										<includes>
											<include>**/*UT.java</include>
										</includes>
									</configuration>
								</execution>
							</executions>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>no-integration-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<configuration>
							<skipTests>true</skipTests>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>

		<profile>
			<id>firefox</id>
			<properties>
				<browser>firefox</browser>
			</properties>
		</profile>
		<profile>
			<id>chrome</id>
			<properties>
				<browser>chrome</browser>
			</properties>
		</profile>
	
		<profile>
			<id>arquillian-weld-ee-embedded</id>
			<dependencies>
				<dependency>
					<groupId>org.jboss.spec</groupId>
					<artifactId>jboss-javaee-6.0</artifactId>
					<version>1.0.0.Final</version>
					<type>pom</type>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.arquillian.container</groupId>
					<artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
					<version>1.0.0.CR3</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.weld</groupId>
					<artifactId>weld-core</artifactId>
					<version>1.1.5.Final</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-simple</artifactId>
					<version>1.6.4</version>
					<scope>test</scope>
				</dependency>
				<dependency>
				  <groupId>org.apache.openejb</groupId>
				  <artifactId>arquillian-tomee-embedded</artifactId>
				  <version>${version.arquillian.tomee}</version>
				  <scope>test</scope>
				</dependency>
				<dependency>
				  <groupId>org.apache.openejb</groupId>
				  <artifactId>tomee-embedded</artifactId>
				  <version>${version.arquillian.tomee}</version>
				  <scope>test</scope>
				</dependency>
				<!--Required for WebServices and RESTful WebServices-->
				<dependency>
				  <groupId>org.apache.openejb</groupId>
				  <artifactId>tomee-webservices</artifactId>
				  <version>${version.arquillian.tomee}</version>
				  <scope>test</scope>
				</dependency>
				<dependency>
				  <groupId>org.apache.openejb</groupId>
				  <artifactId>tomee-jaxrs</artifactId>
				  <version>${version.arquillian.tomee}</version>
				  <scope>test</scope>
				</dependency>
			</dependencies>
		</profile>
	
		<profile>
			<id>glassfish4-embedded</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>
				<!--This has most of the needed dependencies : Derby, JPA, EJB, Java EE 
					7... -->
				<dependency>
					<groupId>org.glassfish.main.extras</groupId>
					<artifactId>glassfish-embedded-all</artifactId>
					<version>${version.glassfish}</version>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.arquillian.container</groupId>
					<artifactId>arquillian-glassfish-embedded-3.1</artifactId>
					<version>${version.arquillian.glassfish}</version>
					<scope>test</scope>
				</dependency>
			</dependencies>
			<build>
				<testResources>
					<testResource>
						<directory>src/test/resources</directory>
					</testResource>
					<testResource>
						<directory>src/test/resources-glassfish-embedded</directory>
					</testResource>
				</testResources>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${version.maven.surefire.plugin}</version>
						<configuration>
							<systemPropertyVariables>
								<java.util.logging.config.file>
									${project.build.testOutputDirectory}/logging.properties
								</java.util.logging.config.file>
								<derby.stream.error.file>
									${project.build.directory}/derby.log
								</derby.stream.error.file>
							</systemPropertyVariables>
						</configuration>
					</plugin>
					<!--plugin>
				      <groupId>org.apache.maven.plugins</groupId>
				      <artifactId>maven-surefire-plugin</artifactId>
				      <configuration>
				        <systemPropertyVariables>
				          <tomee.httpPort>-1</tomee.httpPort>
				          <tomee.stopPort>-1</tomee.stopPort>
				        </systemPropertyVariables>
				      </configuration>
				    </plugin-->
				</plugins>
			</build>
		</profile>
	
		<profile>
			<id>arquillian-jbossas-managed</id>
			<dependencies>
				<dependency>
					<groupId>org.jboss.spec</groupId>
					<artifactId>jboss-javaee-6.0</artifactId>
					<version>1.0.0.Final</version>
					<type>pom</type>
					<scope>provided</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.as</groupId>
					<artifactId>jboss-as-arquillian-container-managed</artifactId>
					<version>7.1.1.Final</version>
					<scope>test</scope>
				</dependency>
				<dependency>
					<groupId>org.jboss.arquillian.protocol</groupId>
					<artifactId>arquillian-protocol-servlet</artifactId>
					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>

		<profile>
	      <id>codesigning</id>
	      <properties>
	        <keystore.path>/opt/prod/prod.keystore</keystore.path> 
	        <keystore.alias>prod</keystore.alias>
	        <keystore.type>JKS</keystore.type>
	        <keystore.store.password>${keystore.password}</keystore.store.password>
	        <keystore.key.password>${keystore.password}</keystore.key.password>
	      </properties>
	    </profile>
		
	</profiles>

	<repositories>
		<repository>
			<id>jboss-public-repository-group</id>
			<name>JBoss Public Maven Repository Group</name>
			<url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
			<layout>default</layout>
		</repository>
		<repository>
			<id>java.net-public-repository-group</id>
			<name>Java.Net Public Maven Repository Group</name>
			<url>https://maven.java.net/content/groups/public</url>
		</repository>
	</repositories>

</project>
